Fixes issue #3089708 Fix mobile navigation on wide screens

--- a/src/css/components/header.css
+++ b/src/css/components/header.css
@@ -27,6 +27,7 @@
     z-index: 2; /* Appear above body content that is position: relative */
     top: calc(-1 * var(--sp4));
     width: 100%;
+    max-width: var(--max-bg-color);
   }
 }
 
