--- a/src/css/components/nav-button-mobile.css
+++ b/src/css/components/nav-button-mobile.css
@@ -50,7 +50,7 @@
   position: relative;
   width: var(--sp2);
   height: 3px;
-  background-color: var(--blue);
+  background-color: var(--color--blue-50);
 
   &:before {
     content: '';
@@ -59,7 +59,7 @@
     left: 0;
     height: 3px;
     width: 100%;
-    background-color: var(--blue);
+    background-color: var(--color--blue-50);
     transition: all 0.2s;
   }
 
@@ -71,7 +71,7 @@
     bottom: -8px;
     height: 3px;
     width: 100%;
-    background-color: var(--blue);
+    background-color: var(--color--blue-50);
     transition: all 0.2s;
   }
 
