--- a/src/css/components/nav-primary.css
+++ b/src/css/components/nav-primary.css
@@ -111,7 +111,7 @@
           width: 100%;
           height: var(--sp0-5);
           transform: scalex(0);
-          background: var(--blue);
+          background: var(--color--blue-50);
           transition: transform 0.2s;
         }
       }
@@ -123,7 +123,7 @@
 .primary-nav--level-2 {
   flex-basis: 100%;
   padding-left: var(--sp2-5);
-  border-left: solid var(--sp) var(--blue);
+  border-left: solid var(--sp) var(--color--blue-50);
   margin-left: calc(-1 * var(--sp));
   max-height: 0;
   overflow: hidden;
@@ -143,7 +143,7 @@
     visibility: hidden;
     padding: calc(3 * var(--sp)) var(--sp2);
     background: white;
-    border-top: solid var(--blue) var(--sp0-5);
+    border-top: solid var(--color--blue-50) var(--sp0-5);
     border-left: 0;
     margin-top: 0;
     margin-left: 0;
@@ -166,7 +166,7 @@
       width: 0;
       border-left: solid 10px transparent;
       border-right: solid 10px transparent;
-      border-bottom: solid 10px var(--blue);
+      border-bottom: solid 10px var(--color--blue-50);
     }
   }
 
@@ -242,7 +242,7 @@
     transform: translate(-50%, -50%);
     width: var(--sp);
     height: 3px;
-    background: var(--blue);
+    background: var(--color--blue-50);
   }
 
   &:after {
