Better focus state for the desktop search button.

--- a/src/css/components/search-button-mobile.css
+++ b/src/css/components/search-button-mobile.css
@@ -1,4 +1,4 @@
-.mobile-search-button {
+/* .mobile-search-button {
   display: none;
   -webkit-appearance: none;
   background: transparent;
@@ -9,4 +9,4 @@
   @media (--nav-md) {
     display: block;
   }
-}
+} */
