--- a/src/css/components/header-search.css
+++ b/src/css/components/header-search.css
@@ -125,28 +125,51 @@
 
     &:focus {
       outline: 0;
+
+      &:after {
+        transform: scalex(1);
+      }
+    }
+
+    &:after {
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      height: 0;
+      transform: scalex(0);
+      border-top: solid var(--sp0-5) var(--color--blue-50);
+      transition: transform 0.2s;
     }
 
     &[aria-expanded="true"] {
       background: black;
 
-      &:before,
       &:after {
-        content: '';
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        width: var(--sp1-5);
-        height: 2px;
-        background-color: white;
+        content: none;
       }
 
-      &:before {
-        transform: translate(-50%, -50%) rotate(-45deg);
-      }
+      .header-nav__search-button__close {
+        &:before,
+        &:after {
+          content: '';
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          width: var(--sp1-5);
+          height: 2px;
+          background-color: white;
+          border: 0;
+        }
 
-      &:after {
-        transform: translate(-50%, -50%) rotate(45deg);
+        &:before {
+          transform: translate(-50%, -50%) rotate(-45deg);
+        }
+
+        &:after {
+          transform: translate(-50%, -50%) rotate(45deg);
+        }
       }
 
       img {
