--- a/src/css/base/base.css
+++ b/src/css/base/base.css
@@ -33,7 +33,7 @@ h1 {
   font-size: 24px;
   line-height: var(--sp1-5);
   letter-spacing: -0.01em;
-  color: #0D1214;
+  color: var(--color--gray-0);
 
   @media (--md) {
     margin-top: var(--sp2);
@@ -50,7 +50,7 @@ h1 {
   left: 0;
   width: 100%;
   height: 100vh;
-  background: #0E6BA6;
+  background: var(--color--blue-20);
   opacity: 0.2;
 
   .js-overlay-active & {
