--- a/src/css/components/nav-secondary.css
+++ b/src/css/components/nav-secondary.css
@@ -37,13 +37,14 @@
     padding: 0;
     display: flex;
     align-items: center;
+    flex-direction: row-reverse;
 
     @media (--nav) {
-      flex-direction: row-reverse;
+      flex-direction: row;
     }
   }
 
-  li:not(:last-child) {
+  li:last-child {
     margin-right: var(--sp1-5);
 
     @media (--nav) {
