--- a/src/css/components/header-buttons-mobile.css
+++ b/src/css/components/header-buttons-mobile.css
@@ -1,3 +1,16 @@
+.js-overlay-active .mobile-buttons {
+  position: fixed;
+  top: 1rem;
+  right: 1rem;
+  z-index: 10;
+  left: 0;
+  right: 0;
+  background: white;
+  height: 54px;
+  top: 0;
+  padding-right: 1rem;
+}
+
 .mobile-buttons {
   grid-column: 4 / 7;
   -ms-grid-column-align: end;
