--- a/src/css/components/header-buttons-mobile.css
+++ b/src/css/components/header-buttons-mobile.css
@@ -1,17 +1,14 @@
 .js-overlay-active .mobile-buttons {
   position: fixed;
-  top: 1rem;
+  top: 0;
   right: 0;
-  z-index: 10;
   left: 0;
+  z-index: 10;
   background: white;
   height: var(--sp3);
-  top: 0;
   padding-right: 1rem;
-  @media (--md) {
-    top: 0;
-    height: 108px;
-    left: initial;
+  @media (--sm) {
+    height: var(--sp6);
     width: 100%;
     max-width: 500px;
   }
