--- a/src/css/components/header.css
+++ b/src/css/components/header.css
@@ -97,7 +97,7 @@
   height: 100%;
   padding: var(--sp3) var(--sp) var(--sp);
   overflow: auto;
-  max-width: 500px;
+  max-width: var(--sm); /* set it not to overlay branding */
   background-color: white;
   transition: all 0.2s;
   box-shadow: 0px 0px 72px rgba(0, 0, 0, 0.1);
