--- a/src/css/components/header.css
+++ b/src/css/components/header.css
@@ -95,19 +95,21 @@
   transform: translatex(101%);
   width: 100%;
   height: 100%;
-  padding: var(--sp3) var(--sp) var(--sp);
+  padding: 0 var(--sp) var(--sp);
   overflow: auto;
   max-width: 500px;
   background-color: white;
+  border-top: solid white var(--sp3); /* Create room for the "close" button. */
   transition: all 0.2s;
   box-shadow: 0px 0px 72px rgba(0, 0, 0, 0.1);
 
   @media (--sm) {
-    padding-top: var(--sp5);
+    border-top-width: var(--sp5);
   }
 
   @media (--md) {
-    padding: var(--sp7) var(--sp3) var(--sp3);
+    padding: 0 var(--sp3) var(--sp3);
+    border-top-width: var(--sp7);
   }
 
   @media (--nav) {
