Fix mobile menu aria-expanded attributes
Replaced aria-pressed with aria-expanded on mobile nav button.
Changed aria-expanded on mobile nav wrapper to data-menu-open attribute in order
to preserver the behaviour but not have the incorrect aria semantics.
Added a focus trap on mobile nav wrapper so that last focus item tabs to toggle
button and first focusable item shift tabs to toggle button.

--- a/src/css/components/nav-button-mobile.css
+++ b/src/css/components/nav-button-mobile.css
@@ -75,7 +75,7 @@
     transition: all 0.2s;
   }
 
-  .mobile-nav-button[aria-pressed="true"] & {
+  .mobile-nav-button[aria-expanded="true"] & {
     background-color: transparent;
 
     &:before {
