Fix wide button nav regression.

--- a/src/css/components/nav-button-wide.css
+++ b/src/css/components/nav-button-wide.css
@@ -37,7 +37,7 @@
     opacity: 1;
   }
 
-  [aria-pressed="true"] & {
+  [aria-expanded="true"] & {
     background-color: transparent;
 
     &:before {
