3092337: Add a message block to the page.

--- a/src/css/base/variables.css
+++ b/src/css/base/variables.css
@@ -103,6 +103,7 @@
   --color--gray-70: #D7E1E8; /* Gray light */
   --color--gray-80: #E7EDF1; /* Gray light 1 */
   --color--gray-95: #F7F9FA; /* Gray light 2 */
+  --color--gray-100: #FFF; /* Gray light 2 */
 
   --color--blue-20: #0D77B5; /* Blue dark */
   --color--blue-30: #3D92C4; /* Blue dark 2 */
