Revert nav changes. Hard code button.

--- a/src/css/components/nav-primary.css
+++ b/src/css/components/nav-primary.css
@@ -10,7 +10,7 @@
       margin-bottom: 0;
     }
 
-    &[aria-haspopup="true"] {
+    &.has-children {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
@@ -184,7 +184,7 @@
     }
   }
 
-  &[aria-expanded="true"] {
+  &.is-active {
     margin-top: var(--sp1-5);
     max-height: none;
     opacity: 1;
@@ -218,7 +218,7 @@
   Is inserted via JavaScript.
   Expands second level nav at mobile
 */
-.primary-nav__button-expand {
+.primary-nav__button-toggle {
   -webkit-appearance: none;
   border: 0;
   background: transparent;
@@ -250,7 +250,7 @@
     transition: opacity 0.2s;
   }
 
-  &[aria-pressed="true"] {
+  &[aria-expanded="true"] {
     &:after {
       opacity: 0;
     }
