3093249: Add table markup and styling and add hyphen to package.json name.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,3 +22,4 @@
 @import 'components/social-container.css';
 @import 'components/search-button-mobile.css';
 @import 'components/main.css';
+@import 'components/table.css';
