Add extra class when we need the grid to go full width

--- a/src/css/base/layout.css
+++ b/src/css/base/layout.css
@@ -22,6 +22,10 @@
   }
 }
 
+.grid-full-no-js > * {
+  grid-column: 1 / -1;
+}
+
 .page-wrapper {
   max-width: var(--max-bg-color);
   background: white;
