Changes to the button to target class instead aria

--- a/src/css/components/nav-button-mobile.css
+++ b/src/css/components/nav-button-mobile.css
@@ -74,9 +74,10 @@
     background-color: var(--color--blue-50);
     transition: all 0.2s;
   }
+}
 
-  .mobile-nav-button[aria-pressed="true"] & {
-    background-color: transparent;
+.mobile-nav-button__icon--active {
+  background-color: transparent;
 
     &:before {
       top: 0;
@@ -87,5 +88,5 @@
       top: 0;
       transform: rotate(45deg);
     }
-  }
 }
+
