--- a/src/css/components/header.css
+++ b/src/css/components/header.css
@@ -87,6 +87,31 @@
 }
 
 .header-nav {
+  padding: var(--sp) 0 var(--sp);
+  background-color: white;
+  grid-column: 1 / -1;
+
+  @media (--sm) {
+    border-top-width: var(--sp5);
+  }
+
+  @media (--md) {
+    padding: var(--sp3) var(--sp3);
+  }
+
+
+  @media (--nav) {
+    grid-column: 5 / 14;
+    height: var(--header-height-wide-when-fixed);
+    display: flex;
+    align-items: center;
+    margin-top: auto;
+    padding: 0;
+    justify-content: flex-end;
+  }
+}
+
+.js-header-nav {
   visibility: hidden;
   position: fixed;
   right: 0;
@@ -98,7 +123,6 @@
   padding: 0 var(--sp) var(--sp);
   overflow: auto;
   max-width: 500px;
-  background-color: white;
   border-top: solid white var(--sp3); /* Create room for the "close" button. */
   transition: all 0.2s;
   box-shadow: 0px 0px 72px rgba(0, 0, 0, 0.1);
@@ -108,30 +132,21 @@
   }
 
   @media (--md) {
-    padding: 0 var(--sp3) var(--sp3);
     border-top-width: var(--sp7);
+    padding: 0 var(--sp3) var(--sp3);
   }
 
   @media (--nav) {
     visibility: visible;
     position: static;
-    grid-column: 5 / 15;
     height: var(--header-height-wide-when-fixed);
     transform: none;
     max-width: none;
     padding: 0;
     overflow: visible;
-    display: flex;
-    margin-top: auto;
-    align-items: center;
-    justify-content: flex-end;
     border-top: 0;
     transition: transform 0.2s;
     box-shadow: none;
-  }
-
-  @media (--lg) {
-    grid-column: 5 / 14;
   }
 
   &[data-menu-open="true"] {
