--- a/src/css/components/header-search.css
+++ b/src/css/components/header-search.css
@@ -182,3 +182,21 @@
     }
   }
 }
+
+.search-wrapper--mobile {
+  display: none;
+  -webkit-appearance: none;
+
+  @media (--nav-md) {
+    display: block;
+  }
+}
+
+.search-wrapper--desktop {
+  display: block;
+
+  @media (--nav-md) {
+    display: none;
+    -webkit-appearance: none;
+  }
+}
