Do not display desktop search at mobile widths

--- a/src/css/components/header-search.css
+++ b/src/css/components/header-search.css
@@ -183,6 +183,13 @@
   max-height: var(--sp8);
 }
 
+.search-wrapper--desktop {
+  @media (--nav-md) {
+    display: none;
+    -webkit-appearance: none;
+  }
+}
+
 .search-wrapper--mobile {
   display: none;
   -webkit-appearance: none;
