--- a/src/css/components/header.css
+++ b/src/css/components/header.css
@@ -23,11 +23,13 @@
   transition: all 0.5s;
 
   &.js-fixed {
-    position: fixed;
-    z-index: 2; /* Appear above body content that is position: relative */
-    top: calc(-1 * var(--sp4));
-    width: 100%;
-    max-width: var(--max-bg-color);
+    @media (--nav) {
+      position: fixed;
+      z-index: 2; /* Appear above body content that is position: relative */
+      top: calc(-1 * var(--sp4));
+      width: 100%;
+      max-width: var(--max-bg-color);
+    }
   }
 }
 
@@ -36,13 +38,17 @@
   transition: all 0.3s;
 
   .site-header__fixable.js-fixed & {
-    background: white;
-    box-shadow: -36px 1px 36px rgba(0, 0, 0, 0.08);
+    @media (--nav) {
+      background: white;
+      box-shadow: -36px 1px 36px rgba(0, 0, 0, 0.08);
+    }
   }
 
   .site-header__fixable.js-fixed &:not([data-menu-open="true"]) {
-    transform: translatex(-101%);
-    opacity: 0;
+    @media (--nav) {
+      transform: translatex(-101%);
+      opacity: 0;
+    }
   }
 }
 
