Fix regression where mobile submenu wasn't positioned properly.

--- a/src/css/components/nav-primary.css
+++ b/src/css/components/nav-primary.css
@@ -12,7 +12,12 @@
 
     &.has-children {
       display: flex;
+      flex-wrap: wrap;
       justify-content: space-between;
+
+      @media (--nav) {
+        flex-wrap: nowrap; /* Ensure that button doesn't wrap underneath link. */
+      }
     }
   }
 
