3094464 Make link underlines more robust.

--- a/src/css/base/forms.css
+++ b/src/css/base/forms.css
@@ -9,6 +9,7 @@
   border-radius: 2px;
   white-space: nowrap;
   transition: background-color 0.2s;
+  text-decoration: none;
 
   &:focus,
   &:hover {
