--- a/src/css/components/nav-secondary.css
+++ b/src/css/components/nav-secondary.css
@@ -52,6 +52,7 @@
     display: inline-flex;
     align-items: center;
     height: var(--sp2);
+    text-decoration: none;
 
     &:after {
       content: '';
