13476291: Initial pass at applying mobile menu style to desktop

--- a/src/css/components/header-buttons-mobile.css
+++ b/src/css/components/header-buttons-mobile.css
@@ -16,3 +16,11 @@
     display: none;
   }
 }
+
+.mobile-nav {
+  @media (--nav) { /* Should this wrap the entire mobile class? */
+    .mobile-buttons {
+      display: flex;
+    }
+  }
+}
