13476291: adjustments to make slide out menu panel visible

--- a/src/css/components/header-search-narrow.css
+++ b/src/css/components/header-search-narrow.css
@@ -68,3 +68,12 @@
   width: var(--sp3);
   cursor: pointer;
 }
+
+.mobile-nav {
+  @media (--nav) {
+    .search-narrow__wrapper {
+      display: block;
+      width: 100%;
+    }
+  }
+}
